<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/BackBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_bank"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        />

    <TextView
        android:id="@+id/loginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/nameApp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        />
    <EditText
        android:id="@+id/Phone"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/loginName"
        android:hint="@string/phone"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/Password"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/Phone"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/FirstName"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/Password"
        android:hint="@string/first_name"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/LastName"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/FirstName"
        android:hint="@string/last_name"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/BornData"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/LastName"
        android:hint="@string/born_data"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/Gender"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/BornData"
        android:hint="Gender"
        android:layout_marginTop="20dp"
        android:textColorHint="#000"
        android:padding="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUp"
        app:layout_constraintTop_toBottomOf="@id/Gender"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/background_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <ProgressBar
        android:id="@+id/ProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>